--- a/main.css
+++ b/main.css
@@ -44,7 +44,7 @@
     display: flex;
     flex-direction: row;
 }
-#credential{
+.credential{
     display: flex;
     flex-direction: column;
     text-align: left;
@@ -131,4 +131,25 @@ span{
     padding-top: 15px;
     padding-bottom: 15px;
     box-shadow: 3px 3px 3px var(--shadow);
+}
+/*EDIT MODE*/
+.edit-credential{
+    display: flex;
+    flex-direction: row;
+}
+.edit-input{
+    background-color: var(--light-bg);
+    width: 150px;
+    height: 5px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+.confirm-edit{
+    flex-direction: row;
+    margin-top: 10px;
+    margin-left: 80px;
+}
+#left{
+    display: flex;
+    flex-direction: column;
 }
